<resources>
    <string name="app_name">Capstone</string>
    <string name="name">아이디</string>
    <string name="button_name">회원가입</string>
    <string name="button2_name">로그인</string>
    <string name="checkBox_name">회원정보 저장</string>
    <string name="logo">logo</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>
</resources>
