<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-40dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:src="@drawable/login_onece2" />

        <EditText
            android:id="@+id/name"
            android:layout_width="223dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:buttonTint="#ffffffff"
            android:text="@string/checkBox_name"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/buttonshape"
                android:text="@string/button_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/button2_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>